--- a/session/src/main/resources/application.yml
+++ b/session/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8081  # Сессии на порту 8081
 
+management:
+  server:
+    port: 8081
+
 spring:
   application:
     name: session
