--- a/voting/src/main/resources/application.yml
+++ b/voting/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8082  # Голосование на порту 8082
 
+management:
+  server:
+    port: 8082
+
 spring:
   application:
     name: voting
