--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -13,11 +13,14 @@
     <version>1.0.0</version>
     <name>gateway</name>
     <description>Gateway Service</description>
-
+    <properties>
+        <java.version>21</java.version>
+        <spring-cloud.version>2023.0.0</spring-cloud.version>
+    </properties>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -27,8 +30,8 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
+            <scope>runtime</scope>      <!-- ✅ Не попадает в production JAR -->
+            <optional>true</optional>    <!-- ✅ Не передаётся в зависимости -->
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -53,4 +56,15 @@
             </plugin>
         </plugins>
     </build>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
