fix: исправлены докерфайлы для мульти-модульной Maven сборки

--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -2,12 +2,13 @@
 FROM maven:3.9-eclipse-temurin-21 AS build
 WORKDIR /app
 COPY pom.xml .
-COPY src ./src
-RUN mvn clean package -DskipTests
+COPY gateway/pom.xml gateway/
+COPY gateway/src gateway/src
 
+RUN mvn clean package -DskipTests -pl gateway -am
 FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
-COPY --from=build /app/target/*.jar app.jar
+COPY --from=build /app/gateway/target/gateway-1.0.0.jar app.jar
 EXPOSE 8080
 ENV SPRING_PROFILES_ACTIVE=prod
 ENTRYPOINT ["java", "-jar", "app.jar"]
