--- a/session/pom.xml
+++ b/session/pom.xml
@@ -11,7 +11,7 @@
 
     <artifactId>session</artifactId>
     <version>1.0.0</version>
-    <name>gateway</name>
+    <name>session</name>
     <description>Gateway Service</description>
 
     <dependencies>
