fix: исправлены докерфайлы для мульти-модульной Maven сборки (опять)

--- a/session/Dockerfile
+++ b/session/Dockerfile
@@ -2,18 +2,24 @@
 FROM maven:3.9-eclipse-temurin-21 AS build
 WORKDIR /app
 
-# Copy root parent POM and session module so Maven can resolve the parent
-# This Dockerfile expects the build context to be the repository root.
-COPY pom.xml .
-COPY session/pom.xml session/pom.xml
-COPY session/src session/src
+COPY . /app
 
-# Build only the session module (resolve parent from root pom)
-RUN mvn -B -pl session -am clean package -DskipTests
+RUN set -eux; \
+	if [ -d ./session ]; then \
+		mvn -B -pl session -am clean package -DskipTests; \
+	else \
+		apt-get update && apt-get install -y --no-install-recommends curl ca-certificates; \
+		mkdir -p /tmp/build_root; \
+		cp -r /app /tmp/build_root/session; \
+		cd /tmp/build_root; \
+		curl -fsSL -o pom.xml https://raw.githubusercontent.com/Samlabb/the-best-choice/main/pom.xml || (echo "Failed to download parent pom"; exit 1); \
+		mvn -B -pl session -am clean package -DskipTests; \
+		mkdir -p /app/session/target; \
+		cp -a /tmp/build_root/session/target/* /app/session/target/ || true; \
+	fi
 
 FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
-# Copy the assembled JAR from the build stage
 COPY --from=build /app/session/target/session-1.0.0.jar app.jar
 EXPOSE 8080
 ENV SPRING_PROFILES_ACTIVE=prod
