--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,14 +1,6 @@
-# Build stage
-FROM maven:3.9-eclipse-temurin-21 AS build
-WORKDIR /app
-COPY pom.xml .
-COPY gateway/pom.xml gateway/
-COPY gateway/src gateway/src
-
-RUN mvn clean package -DskipTests -pl gateway -am
 FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
-COPY --from=build /app/gateway/target/gateway-1.0.0.jar app.jar
+COPY target/gateway-1.0.0.jar app.jar
 EXPOSE 8080
 ENV SPRING_PROFILES_ACTIVE=prod
 ENTRYPOINT ["java", "-jar", "app.jar"]
