--- a/session/Dockerfile
+++ b/session/Dockerfile
@@ -1,6 +1,11 @@
+FROM maven:3.9-eclipse-temurin-21 AS build
+WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests -pl session -am
+
 FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
-COPY target/session-1.0.0.jar app.jar
+COPY --from=build /app/session/target/session-1.0.0.jar app.jar
 EXPOSE 8080
 ENV SPRING_PROFILES_ACTIVE=prod
 ENTRYPOINT ["java", "-jar", "app.jar"]
