--- a/session/pom.xml
+++ b/session/pom.xml
@@ -10,6 +10,10 @@
         <version>1.0.0</version>
     </parent>
 
+    <properties>
+        <lombok.version>1.18.32</lombok.version>
+    </properties>
+
     <artifactId>session</artifactId>
     <version>1.0.0</version>
     <name>session</name>
@@ -41,8 +45,9 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.30</version>
-            <scope>provided</scope>
+            <version>${lombok.version}</version>
+            <scope>compile</scope>
+            <optional>true</optional>
         </dependency>
 
         <!-- DevTools -->
@@ -74,7 +79,7 @@
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
-                            <version>1.18.30</version>
+                            <version>${lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
