опять меняю настройки ямлика для рендера

--- a/session/src/main/resources/application-prod.yml
+++ b/session/src/main/resources/application-prod.yml
@@ -3,9 +3,10 @@ server:
 
 spring:
   datasource:
-    url: ${DATABASE_URL}
+    url: jdbc:${DATABASE_URL}
     username: ${DATABASE_USER}
     password: ${DATABASE_PASSWORD}
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: update
