--- a/session/src/main/resources/application-prod.yml
+++ b/session/src/main/resources/application-prod.yml
@@ -3,13 +3,14 @@ server:
 
 spring:
   datasource:
-    url: jdbc:${DATABASE_URL}
+    url: ${SPRING_DATASOURCE_URL:jdbc:${DATABASE_URL}}
     username: ${DATABASE_USER}
     password: ${DATABASE_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: update
+      dialect: org.hibernate.dialect.PostgreSQLDialect
     properties:
       hibernate:
         default_schema: schema_session
