--- a/session/src/main/resources/application-prod.yml
+++ b/session/src/main/resources/application-prod.yml
@@ -10,7 +10,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-      dialect: org.hibernate.dialect.PostgreSQLDialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         default_schema: schema_session
